<resources>
    <string name="app_name">NEWS Reader</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="my_fav">My Favourite Article(s)</string>
    <string name="article">Article</string>
    <string name="all_favourite_articles">All Favourite Articles</string>
    <string name="try_later">Unable to fetch records. Please try later</string>
    <string name="daily_news">Daily News</string>
    <string name="welcome">Welcome!</string>
</resources>