<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardBusiness"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBusiness"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/business"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHealth"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewHealth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/health"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardScience"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewScience"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/science"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardSports"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSports"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sports"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTechnology"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewTechnology"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/technology"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>